# tpu-container-runtime

./: .gitattributes  README.md
apps/classify-image/: .dockerignore  Dockerfile  app.py  lib-packaged.Dockerfile  requirements.txt  run_in_container.sh
apps/classify-image/model/: mobilenet_v2_1.0_224_inat_bird_quant_edgetpu.tflite
crates/edgetpu/: Cargo.toml
crates/edgetpu/docs/: install.md  troubleshooting.md
crates/edgetpu/examples/: .gitattributes  inference.rs  install-driver.rs  uninstall-driver.rs
crates/edgetpu/examples/models/: mobilenet_v1_1.0_224_quant_edgetpu.tflite
crates/edgetpu/src/: lib.rs
crates/edgetpu/src/bindings/: build.rs
crates/edgetpu/src/cdi/: modifier.rs  spec.rs
crates/edgetpu/src/dep/: download.rs  install.rs  mod.rs  uninstall.rs  util.rs
crates/edgetpu/src/driver/: download.rs  install.rs  uninstall.rs  util.rs
crates/edgetpu/src/image/: edgetpu_image.rs
crates/libcgroups/: Cargo.toml
crates/libcontainer/: Cargo.toml
crates/libedgetpu/: Cargo.toml  build.rs
crates/libedgetpu/src/api/: main.cc  wrapper.h
crates/libedgetpu/src/driver/: driver.rs
crates/libedgetpu/src/headers/: wrapper.h
crates/libedgetpu/src/headers/api/: driver_options_generated.h
crates/libedgetpu/src/headers/executable/: executable_generated.h
crates/libedgetpu/src/lib/direct/k8/: .gitattributes  libedgetpu.so.1.0
crates/libedgetpu/src/lib/throttled/k8/: libedgetpu.so.1.0
crates/tpu-container-runtime/: Cargo.toml
crates/tpu-container-runtime/src/: main.rs
edgetpu/: Cargo.toml
edgetpu/src/: main.rs
edgetpu/src/bindings/: build.rs
k8s/tpu-app/: Dockerfile  app.py
k8s/tpu-driver-ds/: Dockerfile
