[package]
name = "edgetpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = { version = "0.69.4", features = ["static", "logging", "prettyplease", "which-rustfmt"], default-features = false }
clang-sys = { version = "1.8.1", features = ["static", "clang_15_0"] }
curl = "0.4.46"
zip = "2.1.3"
