[package]
name = "edgetpu"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
zip = "2.1.3"
log = "0.4.22"
cpp = "0.5.9"
serde = "1.0.204"
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["blocking"] }
nix = { version = "0.29.0", features = ["user"] }
env_logger = "0.11.3"
cdi = { git = "https://github.com/zvonkok/container-device-interface-rs", branch = "main", version = "0.1.0" }

[build-dependencies]
bindgen = { version = "0.69.4" }
clang-sys = { version = "1.8.1" }
cpp = "0.5.9"
cpp_build = "0.5"

[dev-dependencies]
bytes = "1.6.0"
byteorder = "1.5.0"
image = "0.25.1"
clap = "4.5.9"
