[package]
name = "tpu-container-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "4.5.9"
liboci = "0.2.0"
liboci-cli = "0.3.3"
pentacle = "1.0.0"
tracing = "0.1.40"
youki = { version = "0.3.3", features = ["cgroupsv2_devices", "v1", "v2"] }
