[package]
name = "tpu-container-runtime"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
systemd = ["libcgroups/systemd", "libcontainer/systemd", "v2"]
v2 = ["libcgroups/v2", "libcontainer/v2"]
v1 = ["libcgroups/v1", "libcontainer/v1"]
cgroupsv2_devices = ["libcgroups/cgroupsv2_devices", "libcontainer/cgroupsv2_devices"]

wasm-wasmer = ["wasmer", "wasmer-wasix"]
wasm-wasmedge = ["wasmedge-sdk/standalone", "wasmedge-sdk/static"]
wasm-wasmtime = ["wasmtime", "wasi-common"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libcgroups = { version = "0.3.3" }
libcontainer = { version = "0.3.3" }
liboci-cli = { version = "0.3.3" }
nix = { version = "0.27.1", features = ["feature", "fs", "signal", "user"] }
once_cell = "1.19.0"
pentacle = "1.0.0"
procfs = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabwriter = "1"
clap_complete = "4.1.3"
caps = "0.5.5"
wasmer = { version = "4.0.0", optional = true }
wasmer-wasix = { version = "0.9.0", optional = true }
wasmedge-sdk = { version = "0.13.2", optional = true }
wasmtime = { version = "22.0.0", optional = true }
wasi-common = { version = "22.0.0", optional = true }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-journald = "0.3.0"
oci-spec = "=0.6.4"
anyhow = "1.0.86"
clap = "4.5.9"
sys = "0.0.1"

[patch.crates-io]
nix = { version = "0.27.1" }

[build-dependencies]
anyhow = "1.0.86"
vergen = { version = "8.2.10", features = ["git", "gitcl"] }
